--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Arduino_uTLGBotLib
+name=uTLGBotLib
 version=1.0.0
 author=JRios
 maintainer=JRios <jrios.github@gmail.com>
-sentence=Arduino library for ESP8266 and ESP32 that allow create Telegram Bots.
-paragraph=Arduino library for ESP8266 and ESP32 that allow create Telegram Bots.
+sentence=Universal Telegram Bot library for Arduino, ESP-IDF and Native (Windows and Linux) devices, that let you create Telegram Bots.
+paragraph=Universal Telegram Bot library for Arduino, ESP-IDF and Native (Windows and Linux) devices, that let you create Telegram Bots. You can use it with ESP8266 and ESP32 microcontrollers.
 category=Communication
 url=https://github.com/J-Rios/Arduino_uTLGBotLib
 architectures=*
